# adventofcode

./: .bazelrc  .gitignore  MODULE.bazel  README.md  make_new_day
2020/day1/: day1.py
2020/day10/: day10.py
2020/day12/: day12.py
2020/day16/: day16.py
2020/day4/: day4.py
2020/day7/: day7.py
2021/: BUILD  day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day5_input_test_2.txt  day6.py  day7.py  day8.py  day9.py
2024/: BUILD  day1.cc  day2.cc  utils.cc  utils.h
2025/: BUILD  day1.cc  day10.cc  day11.cc  day12.cc  day2.cc  day3.cc  day4.cc  day5.cc  day6.cc  day7.cc  day8.cc  day9.cc  input7_full.txt
day11/: day11.py
day14/: day14.py
day15/: day15.py
day2/: day2.py
day3/: day3.py
day4/: day4.py
day5/: day5.py
day6/: day6.py
day8/: day8.py
day9/: day9.py
utils/: BUILD  common.cc  common.h
