module(name = "adventofcode", version = "1.0")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "ncurses", version = "6.4.20221231.bcr.10")

bazel_dep(name = "rules_python", version = "0.31.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)
